# TinyLLM

./: .gitignore  AGENTS.md  CODEX.md  codex-progress.md  feature_list.json  pyproject.toml
configs/data/: pretrain_mix_v1.json
configs/model/: tinyllm_128m.json  tinyllm_64m.json  tinyllm_moe_smoke.json
docs/data/: pretrain_mix_v1.md
docs/model/: architecture.md
docs/setup/: server_environment.md
requirements/: base.txt  dev.txt  server-conda.yml  torch-cu126.txt
scripts/: validate_model_configs.py  validate_pretrain_mix.py
src/tinyllm/: __init__.py
src/tinyllm/modeling/: __init__.py  configuration.py  modeling_tinyllm.py
tests/: test_import.py
tests/modeling/: test_tinyllm_config.py  test_tinyllm_model.py
