[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyllm"
version = "0.1.0"
description = "Qwen3-like small language model stack for TinyLLM."
readme = "CODEX.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "safetensors>=0.5.0",
    "tokenizers>=0.20.0",
    "transformers>=4.51.0",
    "PyYAML>=6.0.2",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
